--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 name: Veusz
 markdown: kramdown
 permalink: /news/:year/:month/:day/:title
+include: docs/manual/_images docs/manual/_static docs/manual/_sources
